--- a/style.css
+++ b/style.css
@@ -1,30 +1,54 @@
 .logo{
     margin-left: 30px;
-    margin-right: 400px;
+    margin-right: 420px;
     padding-top: 11px;
     padding-bottom: 11px;
 }
 
+
+
+#nav2{
+    border-bottom: solid rgb(231,231,231);
+    height: 45px;
+    color: rgb(141,130,114);
+    font-weight: 700;
+    background-color: rgb(238,238,238);
+
+}
+
+
+#emailpng{
+    padding-top:7px;
+    width: 25px;
+    height: 30px;
+}
+
+#callpng{
+    padding-top: 6px;
+    height: 35px;
+    width: 30px;
+
+}
 #btn1{
-    padding: 14px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-top:15px;
+    padding-bottom:15px;
     font-weight: 500;
     border-radius: 7px;
     background-color: rgb(13,109,183);
     margin-right: 10px;
     margin-left: 10px;
+    width: 200px;
 }
 
 #btn2{
-    padding: 14px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-top:15px;
+    padding-bottom:15px;
     font-weight: 500;
     border-radius: 7px;
     background-color: rgb(141,198,63);
     margin-right: 10px;
     border: solid 1px rgb(13,109,183);
+    width: 200px;
 }
 
 
@@ -35,37 +59,37 @@
 }
 
 #about{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
 }
 
 #services{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
 }
 
 #media{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
 }
 
 #contact{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
 }
 
 #bank{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
 }
 
 #other{
-    font-weight: 500;
+    font-weight: 490;
     font-size: 1.2rem;
     padding-left: 40px;
     padding-right: 40px;
