--- a/style.css
+++ b/style.css
@@ -1,96 +1,111 @@
 .logo{
-    margin-left: 30px;
-    margin-right: 330px;
-    padding-top: 11px;
-    padding-bottom: 11px;
+    margin-left: 20px;
+    margin-right: 230px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    
 }
 
 
 
 #nav2{
     border-bottom: solid rgb(231,231,231);
-    height: 45px;
+    height: 30px;
     color: rgb(141,130,114);
-    font-weight: 700;
+    font-weight: 500;
     background-color: rgb(238,238,238);
+    font-size: 0.8rem;
 
 }
 
+#email{
+    margin-right: 20px;
+}
+
+#call{
+    margin-right: 20px;
+}
+
+#whatsapp{
+    height: 30px;
+    padding-top: 8px;
+}
 
 #emailpng{
-    padding-top:7px;
-    width: 25px;
-    height: 30px;
+    padding-top: 12px;
+    height: 25px;
 }
 
 #callpng{
-    padding-top: 6px;
-    height: 35px;
-    width: 30px;
+    padding-top: 4px;
+    height: 27px;
+    
 
 }
 #btn1{
-    padding-top:15px;
-    padding-bottom:15px;
+    padding-top:10px;
+    padding-bottom:10px;
     font-weight: 500;
     border-radius: 7px;
     background-color: rgb(13,109,183);
     margin-right: 10px;
     margin-left: 10px;
-    width: 200px;
+    width: 150px;
+    font-size: 0.75rem;
 }
 
 #btn2{
-    padding-top:15px;
-    padding-bottom:15px;
+    padding-top:10px;
+    padding-bottom:10px;
     font-weight: 500;
     border-radius: 7px;
     background-color: rgb(141,198,63);
     margin-right: 10px;
     border: solid 1px rgb(13,109,183);
-    width: 200px;
+    width: 150px;
+    font-size: 0.75rem;
 }
 
 
 #home{
     color: rgb(13,109,183);
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
 }
 
 #about{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
 }
 
 #services{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
 }
 
 #media{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
 }
 
 #contact{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
 }
 
 #bank{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
 }
 
 #other{
-    font-weight: 490;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 0.9rem;
     padding-left: 40px;
     padding-right: 40px;
     color: rgb(13,109,183);
