--- a/style.css
+++ b/style.css
@@ -1,116 +1,176 @@
-.logo{
+* {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    margin: 0;
+    padding: 0;
+}
+
+
+.logo {
     margin-left: 20px;
     margin-right: 230px;
     padding-top: 4px;
     padding-bottom: 4px;
-    
+
 }
 
 
 
-#nav2{
-    border-bottom: solid rgb(231,231,231);
+#nav2 {
     height: 30px;
-    color: rgb(141,130,114);
+    color: rgb(141, 130, 114);
     font-weight: 500;
-    background-color: rgb(238,238,238);
+    background-color: rgb(238, 238, 238);
     font-size: 0.8rem;
 
 }
 
-#email{
+#email {
     margin-right: 20px;
 }
 
-#call{
+#call {
     margin-right: 20px;
 }
 
-#whatsapp{
+#whatsapp {
     height: 30px;
     padding-top: 8px;
 }
 
-#emailpng{
+#emailpng {
     padding-top: 12px;
     height: 25px;
 }
 
-#callpng{
+.flag {
+    height: 30px;
+    padding-top: 9px;
+    cursor: pointer;
+}
+
+#callpng {
     padding-top: 9px;
     height: 26px;
-    
+
 
 }
-#btn1{
-    padding-top:10px;
-    padding-bottom:10px;
+
+#btn1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-weight: 500;
     border-radius: 7px;
-    background-color: rgb(13,109,183);
+    background-color: rgb(13, 109, 183);
     margin-right: 10px;
     margin-left: 10px;
     width: 150px;
     font-size: 0.75rem;
 }
 
-#btn2{
-    padding-top:10px;
-    padding-bottom:10px;
+#btn2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-weight: 500;
     border-radius: 7px;
-    background-color: rgb(141,198,63);
+    background-color: rgb(141, 198, 63);
     margin-right: 10px;
-    border: solid 1px rgb(13,109,183);
+    border: solid 1px rgb(13, 109, 183);
     width: 150px;
     font-size: 0.75rem;
 }
 
 
-#home{
-    color: rgb(13,109,183);
+#home {
+    color: rgb(13, 109, 183);
     font-weight: 600;
     font-size: 0.9rem;
 }
 
-#about{
-    font-weight: 600;
-    font-size: 0.9rem;
-    padding-left: 40px;
-}
-
-#services{
+#about {
     font-weight: 600;
     font-size: 0.9rem;
     padding-left: 40px;
 }
 
-#media{
+#services {
     font-weight: 600;
     font-size: 0.9rem;
     padding-left: 40px;
 }
 
-#contact{
+#media {
     font-weight: 600;
     font-size: 0.9rem;
     padding-left: 40px;
 }
 
-#bank{
+#contact {
     font-weight: 600;
     font-size: 0.9rem;
     padding-left: 40px;
 }
 
-#other{
+#bank {
+    font-weight: 600;
+    font-size: 0.9rem;
+    padding-left: 40px;
+}
+
+#other {
     font-weight: 600;
     font-size: 0.9rem;
     padding-left: 40px;
     padding-right: 40px;
-    color: rgb(13,109,183);
+    color: rgb(13, 109, 183);
 }
 
-#navbar{
-    border-bottom: solid rgb(231,231,231);
+#navbar {
+    border-bottom: solid rgb(231, 231, 231);
+}
+
+h1 {
+    line-height: 40px;
+    font-size: 45px;
+}
+
+.hero{
+    width: 354px;
+    display: inline-block;
+}
+
+#imageid{
+    height: 520px;
+}
+
+#h3 {
+    margin-top: 35px;
+    margin-left: 30px;
+}
+
+#h32 {
+    margin-left: 30px;
+    color: rgb(13, 109, 183);
+    font-weight: 700;
+    display: inline;
+}
+
+#image{
+    display: inline;
+    margin-left: 565px;
+}
+
+#greenheading {
+    display: inline;
+    color: #8dc63f;
+    font-weight: 650;
+}
+
+#welfare {
+    display: inline;
+    margin-left: 15px;
+}
+
+.heading {
+    margin-left: 30px;
+    margin-top: 150px;
 }
