--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@
 
 h1 {
     line-height: 40px;
-    font-size: 45px;
+    font-size: 40px;
 }
 
 .hero{
@@ -156,7 +156,9 @@ h1 {
 
 #image{
     display: inline;
-    margin-left: 565px;
+    margin-left: 570px;
+    position: absolute;
+    padding-top: 40px;
 }
 
 #greenheading {
