--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h1 {
 }
 
 .hero{
-    width: 354px;
+    width: 407px;
     display: inline-block;
 }
 
@@ -145,18 +145,25 @@ h1 {
 #h3 {
     margin-top: 35px;
     margin-left: 30px;
+    display: inline-block;
 }
 
 #h32 {
     margin-left: 30px;
     color: rgb(13, 109, 183);
     font-weight: 700;
-    display: inline;
+    display: inline-block;
+}
+
+#para{
+    width: 800px;
+    line-height: 15px;
+    font-size: large;
 }
 
 #image{
     display: inline;
-    margin-left: 570px;
+    margin-left: 517px;
     position: absolute;
     padding-top: 40px;
 }
