--- a/style.css
+++ b/style.css
@@ -159,6 +159,10 @@ h1 {
     width: 800px;
     line-height: 15px;
     font-size: large;
+    font-weight: 500;
+    color: rgb(75,75,75);
+    margin-left: 30px;
+    margin-top: 20px;
 }
 
 #image{
