--- a/style.css
+++ b/style.css
@@ -160,9 +160,20 @@ h1 {
     line-height: 15px;
     font-size: large;
     font-weight: 500;
-    color: rgb(75,75,75);
+    color: rgb(90,90,90);
     margin-left: 30px;
     margin-top: 20px;
+}
+
+#btn3{
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-right: 35px;
+    padding-left: 35px;
+    margin-left: 30px;
+    border-radius: 5px;
+    border: 1px solid rgb(66,66,66);
+    background-color: #ffff;
 }
 
 #image{
