--- a/style.css
+++ b/style.css
@@ -164,6 +164,69 @@ h1 {
     margin-left: 30px;
     margin-top: 20px;
 }
+#options{
+    background-color: rgb(240,252,219);
+    width: 1510px;
+    height: 125px;
+    margin-left: 30px;
+    margin-top: 90px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+}
+
+#btns{
+    padding-top: 40px;
+}
+
+#input{
+    margin: 0;
+    min-height: 46px;
+    padding-left: 15px;
+    font-size: 100%;
+    font-weight: 600;
+    min-height: 48px;
+    max-height: 48px;
+}
+
+#general{
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    background-color: #424242;
+    color: #ffff;
+    font-size: 12px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 13px;
+    padding-right: 10px;
+    margin-left: 30px;
+    border-radius: 5px;
+    
+}
+
+#general2{
+    padding-right: 10px;
+    font-size: 110%;
+    font-weight: 400;
+}
+
+#rs{
+    padding-left: 10px;
+    font-size: 20px;
+}
+
+#btns button{
+    margin-left: 53px;
+    border-radius: 10px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    padding-left: 28px;
+    padding-right: 28px;
+    font-weight: 500;
+    background-color: #ffff;
+    border: 0;
+}
+
+
 
 #btn3{
     padding-top: 7px;
